revised the files according to QA feedback

--- a/generateQR.html
+++ b/generateQR.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 <h1>QR Code Generator</h1>
-<input type="text" id="valueInput" placeholder="Enter value (e.g., ArtifactID)" />
+<input type="text" id="valueInput" placeholder="Enter value (e.g., ArtifactID)">
 <button onclick="generateQRCode()">Generate QR Code</button>
 <div id="qrcode"></div>
 <a id="downloadLink" class="download-btn" download="qrcode.png">Download QR Code</a>
