--- a/homepage.html
+++ b/homepage.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Homepage</title>
-    <link rel="stylesheet" href="./res/css/styles.css" />
-    <link rel="icon" href="./assets/img/favicon.png" type="image/x-icon" />
-    <link href="./assets/img/favicon.png" rel="icon" />
+    <link rel="stylesheet" href="./res/css/styles.css">
+    <link rel="icon" href="./assets/img/favicon.png" type="image/x-icon">
+    <link href="./assets/img/favicon.png" rel="icon">
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
+    >
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.4/html5-qrcode.min.js"
       integrity="sha512-k/KAe4Yff9EUdYI5/IAHlwUswqeipP+Cp5qnrsUjTPCgl51La2/JhyyjNciztD7mWNKLSXci48m7cctATKfLlQ=="
@@ -28,8 +28,8 @@
     <link
       href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
       rel="stylesheet"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body data-rsssl="1">
     <nav></nav>
@@ -41,7 +41,7 @@
       <a-scene vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;" device-orientation-permission-ui="enabled: false">
         <a-assets>
           <a-asset-item id="exoFont" src="./assets/fonts/exoBlack.typeface.json"></a-asset-item>
-          <img id="pixels" src="./assets/img/pixels.png" />
+          <img id="pixels" src="./assets/img/pixels.png" alt="pixels">
         </a-assets>
 
         <!-- Text Box Background -->
@@ -70,7 +70,7 @@
         src="assets/img/reload.png"
         alt="Reload"
         style="width: 20px; height: 20px"
-      />
+        >
     </button>
 
 
