--- a/scanner.html
+++ b/scanner.html
@@ -20,7 +20,7 @@
     <a-scene vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;">
         <a-assets>
             <a-asset-item id="exoFont" src="fonts/exoBlack.typeface.json"></a-asset-item>
-            <img id="pixels" src="assets/img/pixels.png" />
+            <img id="pixels" src="assets/img/pixels.png" alt = "pixels">
         </a-assets>
     </a-scene>
 
