--- a/access.html
+++ b/access.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Kultoura</title>
     <!-- Link to Font Awesome CSS -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css"
-    />
-    <link rel="icon" href="assets/img/favicon.png" type="image/x-icon" />
-    <link href="assets/img/favicon.png" rel="icon" />
+    >
+    <link rel="icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link href="assets/img/favicon.png" rel="icon">
     <!-- Your custom stylesheet -->
-    <link rel="stylesheet" href="res/css/styles.css" />
+    <link rel="stylesheet" href="res/css/styles.css">
   </head>
   <body class="access-body">
     <div class="logo-container">
-      <img src="assets/img/logo.png" alt="Logo" class="logo" />
+      <img src="assets/img/logo.png" alt="Logo" class="logo">
     </div>
     <div class="back-button-container">
       <a href="index.html"
@@ -30,7 +30,7 @@
     <div class="welcome-container">
       <div class="access-buttons">
         <a href="guest-login.html" class="btn-white">Access as Guest</a>
-        <br />
+        <br>
       </div>
     </div>
   </body>
