--- a/admin-login.html
+++ b/admin-login.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login to Kultoura</title>
-    <link rel="stylesheet" href="res/css/styles.css" />
+    <link rel="stylesheet" href="res/css/styles.css">
     <!-- Include Font Awesome -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css"
       rel="stylesheet"
-    />
-    <link rel="icon" href="assets/img/favicon.png" type="image/x-icon" />
-    <link href="assets/img/favicon.png" rel="icon" />
+    >
+    <link rel="icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link href="assets/img/favicon.png" rel="icon">
   </head>
   <body class="login-body">
     <div class="container">
       <div class="logo-container">
-        <img src="assets/img/logo.png" alt="Logo" class="logo" />
+        <img src="assets/img/logo.png" alt="Logo" class="logo">
       </div>
       <!-- Back button container -->
       <div class="back-button-container">
@@ -40,7 +40,7 @@
               class="input-field"
               placeholder="Enter Admin ID"
               name="admin_username"
-            />
+            >
             <i class="fa fa-user"></i>
           </div>
           <div class="input-container">
@@ -53,7 +53,7 @@
               placeholder="Enter Password"
               id="password-field"
               name="admin_password"
-            />
+            >
             <i class="fa fa-lock icon-left"></i>
             <i class="fa fa-eye toggle-password" id="toggle-password"></i>
           </div>
