--- a/igorot-dances.html
+++ b/igorot-dances.html
@@ -1,19 +1,20 @@
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Homepage</title>
-    <link rel="stylesheet" href="res/css/styles.css" />
-    <link rel="icon" href="assets/img/favicon.png" type="image/x-icon" />
-    <link href="assets/img/favicon.png" rel="icon" />
+    <link rel="stylesheet" href="res/css/styles.css">
+    <link rel="icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link href="assets/img/favicon.png" rel="icon">
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
+    >
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.4/html5-qrcode.min.js"
       integrity="sha512-k/KAe4Yff9EUdYI5/IAHlwUswqeipP+Cp5qnrsUjTPCgl51La2/JhyyjNciztD7mWNKLSXci48m7cctATKfLlQ=="
@@ -24,8 +25,8 @@
     <link
       href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
       rel="stylesheet"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body data-rsssl="1">
     <nav>
@@ -37,7 +38,7 @@
               src="assets/img/logo.png"
               style="height: auto"
               alt="Kultoura Logo"
-            />
+            >
           </a>
         </div>
         <div class="nav-links">
@@ -47,7 +48,7 @@
               style="justify-content: center"
               alt="Kultoura Logo"
               class="logo-name"
-            />
+            >
             <i class="bx bx-x"></i>
           </div>
           <ul class="links">
@@ -67,7 +68,7 @@
         <div class="search-box">
           <i class="bx bx-search"></i>
           <div class="input-box">
-            <input type="text" placeholder="Search..." />
+            <input type="text" placeholder="Search...">
           </div>
         </div>
       </div>
@@ -75,28 +76,28 @@
 
     <div class="video-grid">
       <div class="video">
-        <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail" />
+        <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
         <div class="video-info">
           <h3>Video Title 1</h3>
           <p>Description</p>
         </div>
       </div>
       <div class="video">
-        <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail" />
+        <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
         <div class="video-info">
           <h3>Video Title 2</h3>
           <p>Description</p>
         </div>
       </div>
       <div class="video">
-        <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail" />
+        <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
         <div class="video-info">
           <h3>Video Title 3</h3>
           <p>Description</p>
         </div>
       </div>
       <div class="video">
-        <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail" />
+        <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
         <div class="video-info">
           <h3>Video Title 4</h3>
           <p>Description</p>
