--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SLU Museum</title>
-  <link rel="stylesheet" href="res/css/styles.css" />
-  <link rel="icon" href="assets/img/favicon.png" type="image/x-icon" />
+  <link rel="stylesheet" href="res/css/styles.css">
+  <link rel="icon" href="assets/img/favicon.png" type="image/x-icon">
 </head>
 <body class="welcome-body">
 <header class="banner">
   <div class="logo-container">
-    <img src="assets/img/logo.png" alt="Logo" class="logo" />
+    <img src="assets/img/logo.png" alt="Logo" class="logo">
   </div>
 </header>
 <div class="welcome-container">
