--- a/admin.html
+++ b/admin.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Page</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="javascript.js"></script>
+    <link rel="stylesheet" href="res/css/adminStyle.css">
+    <script src="res/js/javascript.js"></script>
 </head>
 <body>
     <div class="container">
