--- a/guest-login.html
+++ b/guest-login.html
@@ -15,9 +15,12 @@
   </head>
   <body class="access-body">
     <div class="container">
+      <div class="logo-container">
+        <img src="assets/img/logo.png" alt="Logo" class="logo">
+      </div>
       <!-- Back button container -->
       <div class="back-button-container">
-        <a href="access.html"
+        <a href="index.html"
           ><i
             class="fa fa-chevron-circle-left"
             aria-hidden="true"
