--- a/admin-login.html
+++ b/admin-login.html
@@ -20,7 +20,7 @@
       </div>
       <div class="login-container">
         <h1>Log In</h1>
-        <form action="include/admin.php" method="post">
+        <form action="include/admin-login.php" method="post">
           <div class="input-container">
             <p style="text-align: left; font-weight: lighter; font-size: 16px">
               Admin ID
