--- a/homepage.html
+++ b/homepage.html
@@ -185,7 +185,7 @@
       }
 
       function fetchArtifactInfo(artifactId) {
-        fetch(`getArtifact.php?artifact_id=${artifactId}`)
+        fetch(`include/getArtifact.php?artifact_id=${artifactId}`)
                 .then((response) => response.json())
                 .then((data) => {
                   if (data) {
