--- a/admin/admin.html
+++ b/admin/admin.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Page</title>
-    <link rel="stylesheet" href="res/css/adminStyle.css">
-    <script src="res/js/javascript.js"></script>
+    <link rel="stylesheet" href="../res/css/adminStyle.css">
+    <script src="../res/js/javascript.js"></script>
 </head>
 <body>
     <div class="container">
@@ -23,7 +23,7 @@
             </div>
             <div id="add" class="tab-content">
                 <div class="form-container">
-                    <form action="/include/addArtifact.php" method="post">
+                    <form action="../include/addArtifact.php" method="post">
                     <div class="form-group">
                         <label for="artifact-name">Artifact Name:</label>
                         <input type="text" id="artifact-name" name="artifact-name" required>
