--- a/homepage.html
+++ b/homepage.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Homepage</title>
-    <link rel="stylesheet" href="./res/css/styles.css">
-    <link rel="icon" href="./assets/img/favicon.png" type="image/x-icon">
-    <link href="./assets/img/favicon.png" rel="icon">
+    <link rel="stylesheet" href="res/css/styles.css">
+    <link rel="icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link href="assets/img/favicon.png" rel="icon">
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -21,10 +21,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="./res/js/jsQR.js"></script>
-    <script src="./res/js/aframe.min.js"></script>
-    <script src="./res/js/aframe-ar.js"></script>
-    <script src="./res/js/aframe-text-geometry-component.min.js"></script>
+    <script src="res/js/jsQR.js"></script>
+    <script src="res/js/aframe.min.js"></script>
+    <script src="res/js/aframe-ar.js"></script>
+    <script src="res/js/aframe-text-geometry-component.min.js"></script>
     <link
       href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
       rel="stylesheet"
@@ -41,10 +41,10 @@
       <a-scene vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;" device-orientation-permission-ui="enabled: false">
         <a-assets>
           <a-asset-item id="exoFont" src="./assets/fonts/exoBlack.typeface.json"></a-asset-item>
-          <img id="pixels" src="./assets/img/pixels.png" alt="pixels">
-          <img id="errorImage" src="./assets/img/Error.png" alt="error message">
-          <img id="artifactDetected" src="./assets/img/artifact_Detected.png" alt="error message">
-          <img id="artifactBackground" src="./assets/img/artifact_background.png" alt="artifact background">
+          <img id="pixels" src="assets/img/pixels.png" alt="pixels">
+          <img id="errorImage" src="assets/img/Error.png" alt="error message">
+          <img id="artifactDetected" src="assets/img/artifact_Detected.png" alt="error message">
+          <img id="artifactBackground" src="assets/img/artifact_background.png" alt="artifact background">
         </a-assets>
 
       <!-- Add AR components here -->           
@@ -87,6 +87,7 @@
         wrap-count="25"
         color="black">
       </a-text>
+
     </main>
 
     <div id="va-container">
@@ -220,9 +221,9 @@
     <script src="https://cdn.jsdelivr.net/gh/dylanNew/live2d/webgl/Live2D/lib/live2d.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/pixi.js@6.5.2/dist/browser/pixi.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/pixi-live2d-display/dist/index.min.js"></script>
-    <script src="./res/js/VA.js"></script>
-    <script src="./res/js/speakClient.js"></script>
-    <script src="./res/js/scripts.js"></script>
+    <script src="res/js/VA.js"></script>
+    <script src="res/js/speakClient.js"></script>
+    <script src="res/js/scripts.js"></script>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
   </body>
