--- a/homepage.html
+++ b/homepage.html
@@ -1,235 +1,233 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Homepage</title>
-    <link rel="stylesheet" href="res/css/styles.css">
-    <link rel="icon" href="assets/img/favicon.png" type="image/x-icon">
-    <link href="assets/img/favicon.png" rel="icon">
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-    >
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    >
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.4/html5-qrcode.min.js"
-      integrity="sha512-k/KAe4Yff9EUdYI5/IAHlwUswqeipP+Cp5qnrsUjTPCgl51La2/JhyyjNciztD7mWNKLSXci48m7cctATKfLlQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script src="res/js/jsQR.js"></script>
-    <script src="res/js/aframe.min.js"></script>
-    <script src="res/js/aframe-ar.js"></script>
-    <script src="res/js/aframe-text-geometry-component.min.js"></script>
-    <link
-      href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
-      rel="stylesheet"
-    >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-  <body data-rsssl="1">
-    <nav></nav>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Homepage</title>
+  <link rel="stylesheet" href="res/css/styles.css">
+  <link rel="icon" href="assets/img/favicon.png" type="image/x-icon">
+  <link href="assets/img/favicon.png" rel="icon">
+  <link
+          rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+  >
+  <link
+          rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+  >
+  <script
+          src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.4/html5-qrcode.min.js"
+          integrity="sha512-k/KAe4Yff9EUdYI5/IAHlwUswqeipP+Cp5qnrsUjTPCgl51La2/JhyyjNciztD7mWNKLSXci48m7cctATKfLlQ=="
+          crossorigin="anonymous"
+          referrerpolicy="no-referrer"
+  ></script>
+  <script src="res/js/jsQR.js"></script>
+  <script src="res/js/aframe.min.js"></script>
+  <script src="res/js/aframe-ar.js"></script>
+  <script src="res/js/aframe-text-geometry-component.min.js"></script>
+  <link
+          href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
+          rel="stylesheet"
+  >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body data-rsssl="1">
+<nav></nav>
 
-    <main>
-      <video id="video" autoplay style="visibility: hidden"></video>
-      <canvas id="canvas" style="visibility: hidden"></canvas>
+<main>
+  <video id="video" autoplay style="visibility: hidden"></video>
+  <canvas id="canvas" style="visibility: hidden"></canvas>
 
-      <a-scene vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;" device-orientation-permission-ui="enabled: false">
-        <a-assets>
-          <a-asset-item id="exoFont" src="./assets/fonts/exoBlack.typeface.json"></a-asset-item>
-          <img id="pixels" src="assets/img/pixels.png" alt="pixels">
-          <img id="errorImage" src="assets/img/Error.png" alt="error message">
-          <!-- <img id="artifactDetected" src="assets/img/artifact_Detected.png" alt="error message"> -->
-          <img id="artifactBackground" src="assets/img/artifact_background.png" alt="artifact background">
-        </a-assets>
+  <a-scene vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;" device-orientation-permission-ui="enabled: false">
+    <a-assets>
+      <a-asset-item id="exoFont" src="./assets/fonts/exoBlack.typeface.json"></a-asset-item>
+      <img id="pixels" src="assets/img/pixels.png" alt="pixels">
+      <img id="errorImage" src="assets/img/Error.png" alt="error message">
+      <!-- <img id="artifactDetected" src="assets/img/artifact_Detected.png" alt="error message"> -->
+      <img id="artifactBackground" src="assets/img/artifact_background.png" alt="artifact background">
+    </a-assets>
 
-      <!-- Add AR components here -->           
-      <a-image 
-        id="artifact-background" 
-        src="./assets/img/artifact_background.png" 
-        position="0 1.65 -3" 
-        width="2.2" 
-        height="2" 
-        visible="false" 
-        material="opacity: 0.9; transparent: true;">
-      </a-image> 
+    <!-- Add AR components here -->
+    <a-image
+            id="artifact-background"
+            src="./assets/img/artifact_background.png"
+            position="0 1.65 -3"
+            width="2.2"
+            height="2"
+            visible="false"
+            material="opacity: 0.9; transparent: true;">
+    </a-image>
 
-      <!-- <a-image 
-        id="artifact-detected" 
-        src="./assets/img/artifact_Detected.png" 
-        position="0 0.7 -3" 
-        width="1" 
-        height="0.3" 
-        visible="false" 
-        material="opacity: 0.8; transparent: true;">
-      </a-image> -->
-      
-      <a-image 
-        id="error-image" 
-        src="./assets/img/Error.png" 
-        position="0 1.6 -2.5"
-        width="2" 
-        height="1" 
-        visible="false" 
-        material="opacity: 0.9; transparent: true;"
-        animation__shake="
+    <!-- <a-image
+      id="artifact-detected"
+      src="./assets/img/artifact_Detected.png"
+      position="0 0.7 -3"
+      width="1"
+      height="0.3"
+      visible="false"
+      material="opacity: 0.8; transparent: true;">
+    </a-image> -->
+
+    <a-image
+            id="error-image"
+            src="./assets/img/Error.png"
+            position="0 1.6 -2.5"
+            width="2"
+            height="1"
+            visible="false"
+            material="opacity: 0.9; transparent: true;"
+            animation__shake="
             property: position;
             dir: alternate;
             dur: 100;
             easing: easeInOutQuad;
             loop: true;
             to: 0.1 1.6 -2.5;">
-      </a-image>
+    </a-image>
 
-      <a-text 
-        id="text" 
-        font="./assets/fonts/Exo2Bold.fnt"
-        position="-0.5 1.65 -2.5" 
-        width="1"
-        rotation="0 0 0" 
-        wrap-count="25"
-        color="black">
-      </a-text>
+    <a-text
+            id="text"
+            font="./assets/fonts/Exo2Bold.fnt"
+            position="-0.5 1.65 -2.5"
+            width="1"
+            rotation="0 0 0"
+            wrap-count="25"
+            color="black">
+    </a-text>
+  </a-scene>
+</main>
 
-    </main>
+<div id="va-container">
+  <canvas id="va-canvas"></canvas>
+</div>
 
-    <div id="va-container">
-      <canvas id="va-canvas"></canvas>
-    </div>
+<!-- Floating Buttons -->
+<button class="floating-button left" onclick="viewDetails()">i</button>
+<button
+        id="watchVideosButton"
+        onclick="watchVideos()"
+>
+</button>
 
-    <!-- Floating Buttons -->
-    <button class="floating-button left" onclick="viewDetails()">i</button>
-    <button
-      id="watchVideosButton"
-      onclick="watchVideos()"
-    >
-    </button>
+<script>
+  // Initialize video and canvas elements
+  const video = document.getElementById("video");
+  const canvas = document.getElementById("canvas");
+  // const artifactDetected= document.getElementById("artifact-detected");
+  const artifactBackground=document.getElementById("artifact-background");
+  const canvasContext = canvas.getContext("2d");
+  const text = document.getElementById("text");
+  let currentCodeData = null;
+  const errorImage = document.getElementById("error-image");
+  let artifactInfo = "";
 
-    <script>
-      // Initialize video and canvas elements
-      const video = document.getElementById("video");
-      const canvas = document.getElementById("canvas");
-      // const artifactDetected= document.getElementById("artifact-detected");
-      const artifactBackground=document.getElementById("artifact-background");
-      const canvasContext = canvas.getContext("2d");
-      const text = document.getElementById("text");
-      let currentCodeData = null;
-      const errorImage = document.getElementById("error-image");
-      let artifactInfo = "";
+  // Start scanning when the page loads
+  startScanning();
 
-      // Start scanning when the page loads
-      startScanning();
+  // Function to start the camera and scan QR codes
+  function startScanning() {
+    navigator.mediaDevices
+            .getUserMedia({
+              video: {
+                facingMode: "environment",
+              },
+            })
+            .then((stream) => {
+              video.srcObject = stream;
+              video.setAttribute("playsinline", true); // For iOS compatibility
+              video.play();
+              requestAnimationFrame(scanQRCode);
+            })
+            .catch((err) => console.error("Camera access error:", err));
+  }
 
-      // Function to start the camera and scan QR codes
-      function startScanning() {
-        navigator.mediaDevices
-          .getUserMedia({
-            video: {
-              facingMode: "environment",
-            },
-          })
-          .then((stream) => {
-            video.srcObject = stream;
-            video.setAttribute("playsinline", true); // For iOS compatibility
-            video.play();
-            requestAnimationFrame(scanQRCode);
-          })
-          .catch((err) => console.error("Camera access error:", err));
+  // Function to scan QR codes
+  function scanQRCode() {
+    if (video.readyState === video.HAVE_ENOUGH_DATA) {
+      canvas.width = video.videoWidth;
+      canvas.height = video.videoHeight;
+      canvasContext.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+      const imageData = canvasContext.getImageData(0, 0, canvas.width, canvas.height);
+      const code = jsQR(imageData.data, canvas.width, canvas.height);
+
+      onQRCodeDetected(code);
+    }
+    // Continue scanning
+    requestAnimationFrame(scanQRCode);
+  }
+
+  // When QR code is detected
+  function onQRCodeDetected(code) {
+    if (code) {
+      const artifactId = code.data;
+
+      if (artifactId !== currentCodeData) {
+        currentCodeData = artifactId;
+
+        fetchArtifactInfo(artifactId);
       }
+    } else {
+      // QR code not detected, reset or clear the display
+      currentCodeData = null;
+      text.setAttribute("value", "");
+      // artifactDetected.setAttribute("visible", "false");
+      errorImage.setAttribute("visible", "false");
+      artifactBackground.setAttribute("visible", "false");
+      document.getElementById("watchVideosButton").style.display = "none";
+    }
+  }
 
-      // Function to scan QR codes
-      function scanQRCode() {
-        if (video.readyState === video.HAVE_ENOUGH_DATA) {
-          canvas.width = video.videoWidth;
-          canvas.height = video.videoHeight;
-          canvasContext.drawImage(video, 0, 0, canvas.width, canvas.height);
+  function viewDetails() {
+    alert(
+            "Welcome! \nThis is a QR code scanning application designed to provide you with more information about the museum artifacts. \nTo use it, simply position your phone's camera in front of the QR codes located near the artifacts. \nThe app will automatically detect the codes and display detailed information about each artifact."
+    );
+  }
 
-          const imageData = canvasContext.getImageData(0, 0, canvas.width, canvas.height);
-          const code = jsQR(imageData.data, canvas.width, canvas.height);
+  function watchVideos() {
+    window.location.href = "igorot-dances.html";
+  }
 
-          onQRCodeDetected(code);
-        }
-        // Continue scanning
-        requestAnimationFrame(scanQRCode);
-      }
-
-      // When QR code is detected
-      function onQRCodeDetected(code) {
-        if (code) {
-          const artifactId = code.data;
-
-          if (artifactId !== currentCodeData) {
-            currentCodeData = artifactId;
-
-            fetchArtifactInfo(artifactId);
-          }
-        } else {
-          // QR code not detected, reset or clear the display
-          currentCodeData = null;
-          text.setAttribute("value", ""); 
-          // artifactDetected.setAttribute("visible", "false");
-          errorImage.setAttribute("visible", "false");
-          artifactBackground.setAttribute("visible", "false");
-          document.getElementById("watchVideosButton").style.display = "none";
-        }
-      }
-
-      function viewDetails() {
-        alert(
-          "Welcome! \nThis is a QR code scanning application designed to provide you with more information about the museum artifacts. \nTo use it, simply position your phone's camera in front of the QR codes located near the artifacts. \nThe app will automatically detect the codes and display detailed information about each artifact."
-        );
-      }
-
-      function watchVideos() {
-        window.location.href = "igorot-dances.html";
-      }
-
-      function fetchArtifactInfo(artifactId) {
-        fetch(`include/getArtifact.php?artifact_id=${artifactId}`)
-                .then((response) => response.json())
-                .then((data) => {
-                  if (data) {
-                    console.log("Data:", data);
-                    const artifactInfo = `
-                    Artifact Id: ${data['Artifact Id']}
+  function fetchArtifactInfo(artifactId) {
+    fetch(`include/getArtifact.php?artifact_id=${artifactId}`)
+            .then((response) => response.json())
+            .then((data) => {
+              if (data) {
+                console.log("Data:", data);
+                const artifactInfo = `
                     Section Name: ${data['Section Name']}
                     Catalogue Name: ${data['Catalogue Name']}
                     Subcatalogue Name: ${data['Subcatalogue Name']}
                     Name: ${data['Name']}
                     Description: ${data['Description']}
-                    Condition: ${data['Condition']}
                 `.trim();
-                    text.setAttribute("value", artifactInfo);
-                    // artifactDetected.setAttribute("visible", "true");
-                    artifactBackground.setAttribute("visible", "true")
-                    document.getElementById("watchVideosButton").style.display ="block";
-                  } else {
-                    text.setAttribute("value", "");
-                    errorImage.setAttribute("visible", "true");
-                    // artifactDetected.setAttribute("visible", "false");
-                    artifactBackground.setAttribute("visible", "false");
-                    document.getElementById("watchVideosButton").style.display = "none";
-                  }
-                })
-                .catch((error) => {
-                  console.error("Error fetching artifact info:", error);
-                  });
-      }
+                text.setAttribute("value", artifactInfo);
+                // artifactDetected.setAttribute("visible", "true");
+                artifactBackground.setAttribute("visible", "true")
+                document.getElementById("watchVideosButton").style.display ="block";
+              } else {
+                text.setAttribute("value", "");
+                errorImage.setAttribute("visible", "true");
+                // artifactDetected.setAttribute("visible", "false");
+                artifactBackground.setAttribute("visible", "false");
+                document.getElementById("watchVideosButton").style.display = "none";
+              }
+            })
+            .catch((error) => {
+              console.error("Error fetching artifact info:", error);
+            });
+  }
 
-    </script>
+</script>
 
-    <script src="https://cubism.live2d.com/sdk-web/cubismcore/live2dcubismcore.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/dylanNew/live2d/webgl/Live2D/lib/live2d.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/pixi.js@6.5.2/dist/browser/pixi.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/pixi-live2d-display/dist/index.min.js"></script>
-    <script src="res/js/VA.js"></script>
-    <script src="res/js/speakClient.js"></script>
-    <script src="res/js/scripts.js"></script>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
-  </body>
+<script src="https://cubism.live2d.com/sdk-web/cubismcore/live2dcubismcore.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dylanNew/live2d/webgl/Live2D/lib/live2d.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/pixi.js@6.5.2/dist/browser/pixi.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/pixi-live2d-display/dist/index.min.js"></script>
+<script src="res/js/VA.js"></script>
+<script src="res/js/speakClient.js"></script>
+<script src="res/js/scripts.js"></script>
+<script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
+</body>
 </html>
