--- a/guest-login.html
+++ b/guest-login.html
@@ -20,41 +20,52 @@
       </div>
       <!-- Back button container -->
       <div class="back-button-container">
-        <a href="index.html"
-          ><i
+        <a href="index.html">
+          <i
             class="fa fa-chevron-circle-left"
             aria-hidden="true"
             style="color: #ffffff; font-size: x-large"
-          ></i
-        ></a>
+          ></i>
+        </a>
       </div>
       <div class="access-container">
-        <form id="guest-form">
+        <form id="guest-form" onsubmit="return validateForm()">
           <div id="general-form">
             <div class="input-container">
-              <p style="text-align: left; font-weight: lighter; font-size: 16px" >
+              <p style="text-align: left; font-weight: lighter; font-size: 16px">
                 Name
               </p>
               <input
-                      type="text"
-                      id="user_name"
-                      class="input-field"
-                      placeholder="First and last name"
-                      required
+                type="text"
+                id="user_name"
+                class="input-field"
+                placeholder="First and last name"
+                required
               />
             </div>
-            <div class="input-container">
-              <p style="text-align: left; font-weight: lighter; font-size: 16px">
-                School/ Organization
-              </p>
-              <input
-                      type="text"
-                      id="user_school"
-                      class="input-field"
-                      placeholder="School or organization"
-                      required
-              />
+            <div class="input-container" style="width: 300px;">
+              <p style="text-align: left; font-weight: lighter; font-size: 16px">School</p>
+              <select id="schoolSelect" class="input-field" onchange="showOtherInput()">
+                <option value="" disabled selected>Select School</option>
+                <option value="school1">Basic Education School</option>
+                <option value="school2">School of Accountancy, Management, Computing and Information Studies</option>
+                <option value="school3">School of Advanced Studies</option>
+                <option value="school4">School of Engineering and Architecture</option>
+                <option value="school5">School of Law</option>
+                <option value="school6">School of Medicine</option>
+                <option value="school7">School of Nursing, Allied Health, and Biological Sciences</option>
+                <option value="school8">School of Teacher Education and Liberal Arts</option>
+                <option value="other">Others</option>
+              </select>
+
+              <!-- Hidden input field for entering custom school name -->
+              <div id="otherSchoolInput" style="display: none; margin-top: 10px;">
+                <input type="text" id="otherSchoolName" class="input-field" placeholder="Enter your school name" />
+              </div>
             </div>
+          </div>
+          <div id="error-message" style="color: red; display: none; margin-top: 10px;">
+            Please fill out all required fields.
           </div>
           <button type="submit" class="btn-access" id="btn-submit">
             Submit
@@ -62,6 +73,39 @@
         </form>
       </div>
     </div>
-    <script src="res/js/scripts.js"></script>
+
+    <script>
+      function showOtherInput() {
+        var select = document.getElementById("schoolSelect");
+        var otherInput = document.getElementById("otherSchoolInput");
+
+        if (select.value === "other") {
+          otherInput.style.display = "block"; // Show the input field
+        } else {
+          otherInput.style.display = "none"; // Hide the input field if "Others" is not selected
+        }
+      }
+
+      function validateForm() {
+        var name = document.getElementById("user_name").value;
+        var school = document.getElementById("schoolSelect").value;
+        var otherSchool = document.getElementById("otherSchoolName").value;
+        var otherSchoolInput = document.getElementById("otherSchoolInput").style.display;
+        var errorMessage = document.getElementById("error-message");
+
+        // Check if name is filled, school is selected, and otherSchool is filled if "Others" is selected
+        if (
+          name.trim() === "" ||
+          school === "" ||
+          (school === "other" && otherSchool.trim() === "")
+        ) {
+          errorMessage.style.display = "block"; // Show error message
+          return false; // Prevent form submission
+        } else {
+          errorMessage.style.display = "none"; // Hide error message
+          return true; // Allow form submission
+        }
+      }
+    </script>
   </body>
 </html>
